[tool.poetry]
name = "thesillyhome"
version = "0.1.8"
description = ""
authors = ["Chrisopher Lai"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
mysql-connector = "2.2.9"
tqdm = "4.64.0"
joblib = "1.1.0"
appdaemon = "^4.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
